// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test in <ProductImage /> Debe mostrar el componente con la imagen 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="product"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`Test in <ProductImage /> Debe mostrar el componente correctamente con el titulo 1`] = `
<img
  alt="product"
  className="productImg undefined"
  src="https://hola.jpg"
/>
`;
